--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ repository               : "GMC-DRL/GMC-DRL.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "GMC-DRL Team"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Guangzhou, Guangdong, China"
+  employer         : "South China University of Technology"
   uri              : # URL
   email            : "none@example.org" 
 
