--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "GMC-DRL Team"
 title_separator          : "-"
 name                     : &name "GMC-DRL Team"
-description              : &description "personal description"
+description              : &description "Research team on (Meta-)Black-Box Optimization, Deep Rinforcement Learning and Large Language Model"
 url                      : https://GMC-DRL.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GMC-DRL/GMC-DRL.github.io"
