--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "gmc.png"
   name             : "GMC-DRL Team"
   pronouns         : # example: "she/her"  
-  bio              : "Research team on (Meta-)Black-Box Optimization, Deep Rinforcement Learning and Large Language Model"
+  bio              : "Research team on (Meta-)Black-Box Optimization, Deep Reinforcement Learning and Large Language Model"
   location         : "Guangzhou, Guangdong, China"
   employer         : "South China University of Technology"
   uri              : # URL
