--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Guangzhou, Guangdong, China"  # 地址
   employer         : "South China University of Technology"  # 单位
   uri              : # URL
-  email            : "scut.crazynicolas@gmail.com" "wukongqwj@gmail.com" # 团队负责人邮箱
+  email            : "scut.crazynicolas@gmail.com" # 团队负责人邮箱
   # 以下是Arxiv scholar 推特等等的主页，如果创建了可以加上，没有就空着，就不会显示在网页上
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile  
