--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings 不会显示在网页上
 locale                   : "en-US"
-title                    : "MetaEvo Team"
+title                    : "MetaEvolution Lab"
 title_separator          : "-"
-name                     : &name "MetaEvo Team"
+name                     : &name "MetaEvo"
 description              : &description "Research team on (Meta-)Black-Box Optimization, Deep Rinforcement Learning and Large Language Model"
 url                      : https://MetaEvo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,7 +22,7 @@ repository               : "MetaEvo/MetaEvo.github.io"
 author:
   # Biographic information
   avatar           : "metaevo_small.png"  # 头像图片，解析自动添加image/前缀，不需要再加
-  name             : "MetaEvo Team"  # 团队名
+  name             : "MetaEvo"  # 团队名
   pronouns         : # example: "she/her"  
   bio              : "Research team on (Meta-)Black-Box Optimization, Deep Reinforcement Learning and Large Language Model"  # 显示在名字下方的简短介绍
   location         : "Guangzhou, Guangdong, China"  # 地址
