--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "MetaEvo/MetaEvo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  png           : "metaevo_small.png"  # 头像图片，解析自动添加image/前缀，不需要再加
+  png           : "metaevo.png"  # 头像图片，解析自动添加image/前缀，不需要再加
   name             : "MetaEvo"  # 团队名
   pronouns         : # example: "she/her"  
   bio              : "Research team on (Meta-)Black-Box Optimization, Deep Reinforcement Learning and Large Language Model"  # 显示在名字下方的简短介绍
